essaimStatistiques.html colonnes Ruche et Rucher, largeur barre max 12

--- a/src/main/resources/templates/essaim/essaimStat.html
+++ b/src/main/resources/templates/essaim/essaimStat.html
@@ -36,7 +36,7 @@
 			<thead>
 				<tr>
 					<th th:text="#{dateAcquisition}"></th>
-					<th th:unless="${masquerInactif}" th:text="#{dispersion}"></th>
+					<th th:unless="${masquerInactif}" th:text="#{Sortie}"></th>
 					<th th:if="${rucherId == null}" th:text="#{Duree}"></th>
 					<th th:text="#{Total}"></th>
 					<th th:text="#{Max}"></th>
