supprimé les / de fin sur les éléments void html.
essaimForm.html corrigé erreurs validator w3c sur label checkboxes

--- a/src/main/resources/templates/essaim/essaimCadreLotForm.html
+++ b/src/main/resources/templates/essaim/essaimCadreLotForm.html
@@ -54,7 +54,7 @@
 		</div>
 		<div th:replace="~{includeForm :: commentaire}"></div>
 		<small id="textHelp" class="form-text text-muted"
-			th:text="#{evenruchercadreaide}"></small><br />
+			th:text="#{evenruchercadreaide}"></small><br>
 		<div th:replace="~{includeForm :: BtnForm}"></div>
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
