--- a/src/main/resources/templates/ruche/rucheCadreForm.html
+++ b/src/main/resources/templates/ruche/rucheCadreForm.html
@@ -63,7 +63,7 @@
 		</div>
 		<div th:replace="~{includeForm :: commentaireField}"></div>
 		<small id="textHelp" class="form-text text-muted"
-			th:text="#{evenruchercadreaide}"></small><br />
+			th:text="#{evenruchercadreaide}"></small><br>
 		<div th:replace="~{includeForm :: BtnForm}"></div>
 	</form>
 	<footer th:replace="~{include::footer}"></footer>
