--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -1,24 +1,23 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
-
 <head th:with="ruchesjs='/js/ruches-52/'"
 	th:fragment="common_header(scripts,styles,links)">
 <title th:text="#{Ruches}"></title>
-<meta charset="UTF-8" />
-<link rel="manifest" th:href="@{/js/manifest.webmanifest}" />
+<meta charset="UTF-8">
+<link rel="manifest" th:href="@{/js/manifest.webmanifest}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/png" th:href="@{/images/ruchesicon.png}" />
+<link rel="icon" type="image/png" th:href="@{/images/ruchesicon.png}">
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/css/ruches-4.css}" />
+	th:href="@{/css/ruches-4.css}">
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/datatables-2.1.8/datatables.min.css}" />
+	th:href="@{/js/datatables-2.1.8/datatables.min.css}">
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/images/bootstrap-icons-1.11.3/bootstrap-icons.min.css}" />
+	th:href="@{/images/bootstrap-icons-1.11.3/bootstrap-icons.min.css}">
 <script th:src="@{/js/jquery-3.7.1.min.js}"></script>
 <script th:src="@{/js/jquery.validate.min-1.21.0.js}"></script>
 <script th:src="@{/js/bootstrap-5.3.3/bootstrap.bundle.min.js}"></script>
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/bootstrap-5.3.3/bootstrap.min.css}" />
+	th:href="@{/js/bootstrap-5.3.3/bootstrap.min.css}">
 <script th:src="@{/js/datatables-2.1.8/datatables.min.js}"></script>
 <script th:inline="javascript">	/* exported urlValMessFr,urlDatatMessFr,datatPageLength,tout */
 	const urlValMessFr = /*[[@{/js/jquery.validate-1.21.0-messages_fr.min.js}]]*/null;
@@ -49,7 +48,7 @@
 
 <script th:fragment="jsol" th:src="@{/js/ol-6.15.1/ol.js}"></script>
 <link th:fragment="cssol" rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/ol-6.15.1/ol.css}" />
+	th:href="@{/js/ol-6.15.1/ol.css}">
 
 <!--/* th:data-key="${@environment.getProperty('ign.data.key')}" */-->
 <!--/* th:attr="data-url=@{/js/autoconf.js}" */-->
@@ -63,7 +62,7 @@
 	th:src="@{/js/GpPluginOpenLayers-3.4.4/GpPluginOpenLayers.js}"></script>
 <link th:fragment="cssGpPluginOpenLayers" rel="stylesheet"
 	type="text/css" media="all"
-	th:href="@{/js/GpPluginOpenLayers-3.4.4/GpPluginOpenLayers.css}" />
+	th:href="@{/js/GpPluginOpenLayers-3.4.4/GpPluginOpenLayers.css}">
 
 <script defer th:fragment="dom-to-image"
 	th:src="@{/js/dom-to-image-more.min-3.4.3.js}"></script>
@@ -83,15 +82,15 @@
 
 <link th:fragment="weather-icons" rel="stylesheet" type="text/css"
 	media="all"
-	th:href="@{/css/weather-icons-2.0.12/css/weather-icons.min.css}" />
+	th:href="@{/css/weather-icons-2.0.12/css/weather-icons.min.css}">
 <link th:fragment="weather-icons-wind" rel="stylesheet" type="text/css"
 	media="all"
-	th:href="@{/css/weather-icons-2.0.12/css/weather-icons-wind.min.css}" />
+	th:href="@{/css/weather-icons-2.0.12/css/weather-icons-wind.min.css}">
 
 <script th:fragment="jsdatetimepicker" defer
 	th:src="@{/js/jquery.datetimepicker.full.min-2.5.21.js}"></script>
 <link th:fragment="cssdatetimepicker" rel="stylesheet" type="text/css"
-	media="all" th:href="@{/js/jquery.datetimepicker.min-2.5.21.css}" />
+	media="all" th:href="@{/js/jquery.datetimepicker.min-2.5.21.css}">
 <script th:fragment="localejsdatetimepicker">
 	document.addEventListener('DOMContentLoaded', () => {
 		$('#date').datetimepicker(); // bof... 
@@ -103,7 +102,7 @@
 	th:src="@{/js/jquery-date-range-picker-0.21.1/jquery.daterangepicker.min.js}"></script>
 <link th:fragment="cssjquerydaterangepicker" rel="stylesheet"
 	type="text/css" media="all"
-	th:href="@{/js/jquery-date-range-picker-0.21.1/daterangepicker.min.css}" />
+	th:href="@{/js/jquery-date-range-picker-0.21.1/daterangepicker.min.css}">
 <script th:fragment="moment" defer th:src="@{/js/moment-min-2.30.1.js}"></script>
 
 <body>
