--- a/src/main/resources/templates/essaim/essaimTraitementForm.html
+++ b/src/main/resources/templates/essaim/essaimTraitementForm.html
@@ -50,17 +50,17 @@
 			th:field="*{hausse}" />
 		<div th:replace="~{includeForm :: dateField}"></div>
 		<div class="form-floating mb-3 ruches">
-			<select id="type" name="type" class="form-control"> 
-					<option
-						th:each="te : ${typeEve}"
-					th:value="${te}" th:text="#{${te}}"
-					th:selected="${te}==*{type}"></option>
+			<select id="type" name="type" class="form-control">
+				<option th:each="te : ${typeEve}" th:value="${te}"
+					th:text="#{${te}}" th:selected="${te}==*{type}"></option>
 			</select> <label class="form-label" for="type" th:text="#{typeEvenement}"></label>
 		</div>
 		<div class="form-floating mb-3">
-			<input placeholder="" class="form-control" type="number" step="0.001"
-				th:field="*{valeur}" th:errorclass="fieldError" /> <label
-				class="form-label" th:text="#{quantite}" for="valeur"></label>
+			<select class="form-control" th:field="*{valeur}">
+				<option
+					th:each="traitement : ${T(ooioo.ruches.evenement.TypeTraitement).values()}"
+					th:value="${traitement}" th:text="#{${traitement}}"></option>
+			</select> <label class="form-label" for="traitement" th:text="#{Traitement}"></label>
 		</div>
 		<div th:replace="~{includeForm :: commentaireField}"></div>
 		<div th:replace="~{includeForm :: BtnForm}"></div>
