--- a/src/main/resources/templates/essaim/essaimTraitementLotForm.html
+++ b/src/main/resources/templates/essaim/essaimTraitementLotForm.html
@@ -45,11 +45,18 @@
 	<form action="#"
 		th:action="@{'/evenement/essaim/sauve/lot/' + ${eIds}}" method="post"
 		id="evenementForm">
-		<input type="hidden" id="valeur" name="valeur" /> <input
+		<input
 			type="hidden" id="typeEvenement" name="typeEvenement"
 			value="ESSAIMTRAITEMENT" />
 		<div th:replace="~{includeForm :: date}"></div>
 		<div th:replace="~{includeForm :: finTraitement}"></div>
+		<div class="form-floating mb-3">
+			<select class="form-control" id="valeur" name="valeur">
+				<option
+					th:each="traitement : ${T(ooioo.ruches.evenement.TypeTraitement).values()}"
+					th:value="${traitement}" th:text="#{${traitement}}"></option>
+			</select> <label class="form-label" for="traitement" th:text="#{Traitement}"></label>
+		</div>
 		<div th:replace="~{includeForm :: commentaire}"></div>
 		<div th:replace="~{includeForm :: BtnForm}"></div>
 	</form>
