--- a/src/main/resources/templates/essaim/essaimStat.html
+++ b/src/main/resources/templates/essaim/essaimStat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:inline="javascript">
@@ -49,8 +49,7 @@
 			<tbody>
 				<tr th:each="essaimPoids : ${essaimsPoids}">
 					<td th:text="${essaimPoids.dateA}"></td>
-					<td th:unless="${masquerInactif}"
-						th:text="${essaimPoids.dateD}"></td>
+					<td th:unless="${masquerInactif}" th:text="${essaimPoids.dateD}"></td>
 					<td th:if="${rucherId == null}" th:text="${essaimPoids.duree}"></td>
 					<td th:text="${essaimPoids.pTotal}"></td>
 					<td th:text="${essaimPoids.pMax}"></td>
