--- a/src/main/resources/templates/essaim/essaimsGraphe.html
+++ b/src/main/resources/templates/essaim/essaimsGraphe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsChart}"></script>
@@ -32,7 +32,7 @@
 			</div>
 			<div class="col">
 				<label th:text="#{AfficherEchelle}" for="scales"></label> <input
-					type="checkbox" id="scales" checked /> &nbsp;
+					type="checkbox" id="scales" checked> &nbsp;
 				<button id="zoomini" type="button" class="btn btn-primary btn-sm"
 					th:text="#{ZoomIni}"></button>
 			</div>
@@ -43,7 +43,8 @@
 			</div>
 		</div>
 	</div>
-	<div th:unless="${#lists.isEmpty(dates)}" id="chart-wrapper" style="position: relative; height:80vh; width:100vw">
+	<div th:unless="${#lists.isEmpty(dates)}" id="chart-wrapper"
+		style="position: relative; height: 80vh; width: 100vw">
 		<canvas id="ctx"></canvas>
 	</div>
 	<footer th:replace="~{include::footer}"></footer>
