--- a/src/main/resources/templates/essaim/essaimCadreLotForm.html
+++ b/src/main/resources/templates/essaim/essaimCadreLotForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
@@ -45,11 +45,11 @@
 		th:action="@{'/evenement/essaim/sauve/lot/' + ${eIds}}" method="post"
 		id="evenementForm">
 		<input type="hidden" id="typeEvenement" name="typeEvenement"
-			value="RUCHECADRE" />
+			value="RUCHECADRE">
 		<div th:replace="~{includeForm :: date}"></div>
 		<div class="form-floating mb-3">
 			<input placeholder="" class="form-control" type="text" id="valeur"
-				name="valeur" /> <label class="form-label" th:text="#{nbCadres}"
+				name="valeur"> <label class="form-label" th:text="#{nbCadres}"
 				for="valeur"></label>
 		</div>
 		<div th:replace="~{includeForm :: commentaire}"></div>
