--- a/src/main/resources/templates/essaim/essaimCommentaireForm.html
+++ b/src/main/resources/templates/essaim/essaimCommentaireForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
@@ -41,10 +41,10 @@
 	</div>
 	<form action="#" th:action="@{'/evenement/essaim/commentaire/sauve'}"
 		th:object="${evenement}" method="post" id="evenementForm">
-		<input type="hidden" th:field="*{id}" /> <input type="hidden"
-			th:field="*{type}" /> <input type="hidden" th:field="*{ruche}" /> <input
-			type="hidden" th:field="*{rucher}" /> <input type="hidden"
-			th:field="*{essaim}" /> <input type="hidden" th:field="*{hausse}" />
+		<input type="hidden" th:field="*{id}"> <input type="hidden"
+			th:field="*{type}"> <input type="hidden" th:field="*{ruche}"> <input
+			type="hidden" th:field="*{rucher}"> <input type="hidden"
+			th:field="*{essaim}"> <input type="hidden" th:field="*{hausse}">
 		<div th:replace="~{includeForm :: dateField}"></div>
 		<div th:replace="~{includeForm :: commentaireField}"></div>
 		<div th:replace="~{includeForm :: notifDelaiField}"></div>
