--- a/src/main/resources/templates/essaim/essaimSucreLotForm.html
+++ b/src/main/resources/templates/essaim/essaimSucreLotForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
@@ -46,7 +46,7 @@
 		th:action="@{'/evenement/essaim/sauve/lot/' + ${eIds}}" method="post"
 		id="evenementForm">
 		<input type="hidden" id="typeEvenement" name="typeEvenement"
-			value="ESSAIMSUCRE" />
+			value="ESSAIMSUCRE">
 		<div th:replace="~{includeForm :: date}"></div>
 		<div th:replace="~{includeForm :: poidskg}"></div>
 		<div th:replace="~{includeForm :: commentaire}"></div>
