--- a/src/main/resources/templates/hausse/hausseForm.html
+++ b/src/main/resources/templates/hausse/hausseForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
@@ -74,26 +74,26 @@
 	</div>
 	<form action="#" th:action="@{/hausse/sauve}" th:object="${hausse}"
 		method="post" id="hausseForm">
-		<input type="hidden" th:field="*{id}" /> <input type="hidden"
-			th:field="*{ruche}" /> <input type="hidden"
-			th:field="*{ordreSurRuche}" />
+		<input type="hidden" th:field="*{id}"> <input type="hidden"
+			th:field="*{ruche}"> <input type="hidden"
+			th:field="*{ordreSurRuche}">
 		<div th:replace="~{includeForm :: nomField}"></div>
 		<div th:replace="~{includeForm :: activeField}"></div>
 		<div th:replace="~{includeForm :: dateAcquisitionField}"></div>
 		<div class="form-floating mb-3">
 			<input placeholder="5.000" class="form-control" type="number"
 				step="0.001" min="0" max="20" th:field="*{poidsVide}"
-				th:errorclass="fieldError" /> <label class="form-label"
+				th:errorclass="fieldError"> <label class="form-label"
 				for="poidsVide" th:text="#{poidskg}"></label>
 		</div>
 		<div class="form-floating mb-3">
 			<input placeholder="9" class="form-control" type="number"
-				th:field="*{nbCadres}" th:errorclass="fieldError" /> <label
+				th:field="*{nbCadres}" th:errorclass="fieldError"> <label
 				class="form-label" for="nbCadres" th:text="#{nombredecadres}"></label>
 		</div>
 		<div class="form-floating mb-3">
 			<input placeholder="9" class="form-control" type="number"
-				th:field="*{nbCadresMax}" th:errorclass="fieldError" /> <label
+				th:field="*{nbCadresMax}" th:errorclass="fieldError"> <label
 				class="form-label" for="nbCadresMax" th:text="#{nombredecadresmax}"></label>
 		</div>
 		<div th:replace="~{includeForm :: commentaireField}"></div>
