--- a/src/main/resources/templates/personne/personneForm.html
+++ b/src/main/resources/templates/personne/personneForm.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org">
+	xmlns:sec="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:inline="javascript">
@@ -69,13 +69,13 @@
 	</div>
 	<form action="#" th:action="@{/personne/sauve}" th:object="${personne}"
 		method="post" id="personneForm">
-		<input type="hidden" th:field="*{id}" /> <input type="hidden"
-			th:field="*{version}" /> <input type="hidden"
-			sec:authorize="!hasRole('ROLE_admin')" th:field="*{roles}" />
+		<input type="hidden" th:field="*{id}"> <input type="hidden"
+			th:field="*{version}"> <input type="hidden"
+			sec:authorize="!hasRole('ROLE_admin')" th:field="*{roles}">
 		<div th:replace="~{includeForm :: nomField}"></div>
 		<div class="form-floating mb-3">
 			<input class="form-control" type="text" th:field="*{prenom}"
-				placeholder="" th:errorclass="fieldError" maxlength="35" /> <label
+				placeholder="" th:errorclass="fieldError" maxlength="35"> <label
 				class="form-label" th:text="#{prenom}" for="prenom"></label>
 		</div>
 		<div class="form-floating mb-3">
@@ -85,27 +85,27 @@
 		</div>
 		<div class="form-floating mb-3">
 			<input class="form-control" placeholder="" type="text"
-				th:field="*{email}" th:errorclass="fieldError" maxlength="255" /> <label
-				class="form-label" th:text="#{email}" for="email"></label>
+				th:field="*{email}" th:errorclass="fieldError" maxlength="255">
+			<label class="form-label" th:text="#{email}" for="email"></label>
 		</div>
 		<div class="form-floating mb-3">
 			<input placeholder="" class="form-control" type="text"
-				th:field="*{adresse}" th:errorclass="fieldError" maxlength="255" />
+				th:field="*{adresse}" th:errorclass="fieldError" maxlength="255">
 			<label class="form-label" th:text="#{adresse}" for="adresse"></label>
 		</div>
 		<div class="form-floating mb-3">
 			<input placeholder="" class="form-control" type="text"
-				th:field="*{login}" th:errorclass="fieldError" maxlength="35" /> <label
-				class="form-label" th:text="#{login}" for="login"></label>
+				th:field="*{login}" th:errorclass="fieldError" maxlength="35">
+			<label class="form-label" th:text="#{login}" for="login"></label>
 		</div>
 		<div class="form-floating mb-3">
 			<input placeholder="" class="form-control" type="password"
-				th:field="*{password}" th:errorclass="fieldError" maxlength="35" />
+				th:field="*{password}" th:errorclass="fieldError" maxlength="35">
 			<label class="form-label" th:text="#{motDePasse}" for="password"></label>
 			<div class="form-check mb-3">
 				<input class="form-check-input" type="checkbox" id="showhide"
-					name="showhide" /> <label class="form-check-label" for="showhide"
-					th:text="#{affichermotdepasse}"></label>
+					name="showhide"> <label class="form-check-label"
+					for="showhide" th:text="#{affichermotdepasse}"></label>
 			</div>
 		</div>
 		<div class="form-floating mb-3" sec:authorize="hasRole('ROLE_admin')">
