--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
@@ -58,19 +58,21 @@
 	</div>
 	<form action="#" th:action="@{/ruche/sauve}" th:object="${ruche}"
 		method="post" id="rucheForm">
-		<input type="hidden" th:field="*{id}" /> <input type="hidden"
-			th:field="*{essaim}" /> <input type="hidden" th:field="*{rucher}" />
+		<input type="hidden" th:field="*{id}"> <input type="hidden"
+			th:field="*{essaim}"> <input type="hidden"
+			th:field="*{rucher}">
 		<div th:replace="~{includeForm :: nomField}"></div>
 		<div th:replace="~{includeForm :: activeField}"></div>
 		<div class="form-check">
-			<input class="form-check-input" type="checkbox"
-				th:field="*{production}" /> <label class="form-check-label"
-				for="production" th:text="#{Production}"></label>
+			<label class="form-check-label"> <span
+				th:text="#{Production}"> </span> <input class="form-check-input"
+				type="checkbox" th:field="*{production}">
+			</label>
 		</div>
 		<div class="form-floating mb-3">
 			<input class="form-control" placeholder="15.000" type="number"
 				step="0.001" min="0" max="80" th:field="*{poidsVide}"
-				th:errorclass="fieldError" /> <label class="form-label"
+				th:errorclass="fieldError"> <label class="form-label"
 				for="poidsVide" th:text="#{poidskg}"></label>
 		</div>
 		<div class="form-floating mb-3">
